Set up serverHost so only host can change times, no one else. Also renamed server_v6.js to server.js

--- a/files/programNotes.html
+++ b/files/programNotes.html
@@ -15,11 +15,11 @@
 		called an "envelope". This is the pink shape displayed behind the staff. Each performer starts to play either once the start countdown reaches
 		0, or when the envelope reaches the left line on the screen. The loudest dynamic is represented when the top of the envelop reaches the top line of the staff. Silence is represented
 		by an absence of the envelope. Additionally, the staff for each part will disappear while the part rests, and reappear 5 seconds before each entrance.</p>
-		<p>The envelopes should be treated as general guidelines. Musicians are free to alter the envelopes or improvise rhythms as they see fit, as long as the general character lines up with envelopes currently being displayed. Rehearsals of the piece
+		<p>The envelopes should be treated as general guidelines. Musicians are free to alter the envelopes or improvise rhythms as long as the general character lines up with envelopes currently being displayed. Rehearsals of the piece
 		may involve discussion of what kind of alterations to make where.
 		</p>
-		<p>Additionally, players are encouraged to experiment with different timbres throughout the piece, as long as the main, notated pitch is evident in the sound. Thus, the use of techniques such as mutes, sul ponticello and others are encouraged.
-		However, all timbral changes should either be gradual or take effect immediately at the instrument's entrance.</p>
+		<p>Players are also encouraged to experiment with different timbres throughout the piece, as long as the main, notated pitch is evident in the sound. Thus, the use of techniques such as mutes, sul ponticello and others are encouraged.
+		However, all timbral changes should either be gradual or take effect immediately at the instrument's entrance (when the part reappears on the score).</p>
 		<h4>Special Notes for Pianists</h4>
 		<p>Pianists can play the specified pitch in different octaves,
 		as long as the predominant octave is the notated one. Additionally, some of the envelopes notated are not pianistic (crescendos and decrescendos). It is
@@ -42,8 +42,8 @@
 			<li>Violoncello</li>
 			<li>Contrabass</li>
 		</ul>
-		<h3>"Pillar Notes"</h3>
-		<p>Each bar corresponds to each of the tickmarks on the score. These form the structure of the piece. Each note is held for 16 seconds before changing according to an algorithm.
+		<h3>"Pillar Chords"</h3>
+		<p>"Pillar chords" are verticalities that occur for 16 seconds every 98 seconds. These form the structure of the piece.
 		<div style='display:inline'><img src='pg1.svg'/><img src='pg2.svg'/></div>
 	</body>
 </html>
