--- a/files/serverHost.html
+++ b/files/serverHost.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Clade II - Wyatt Cannon</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<script src='client_new_v1.js'></script>
+		<script src='settingScript.js'></script>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="/timesync/timesync.js"></script> 
 		<script src="webmidi.js"></script>
@@ -19,7 +19,7 @@
 		</style>
 	</head>
 	<body style='margin:0px; padding:0px; overflow:hidden;' onload="setValues1(scrwidth, scrheight);">
-		<canvas id="canvas1" width='1024' height='1024'></canvas>
+		<canvas id="canvas1" width='1024' height='1024' onclick='setTime(event)'></canvas>
 		<div style="font-family: Clefs;">.</div>
 		<div style="font-family: feta26;">.</div>
 	</body>
