--- a/files/serverHost.html
+++ b/files/serverHost.html
@@ -4,6 +4,7 @@
 		<title>Clade II - Wyatt Cannon</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<script src='settingScript.js'></script>
+		<script src='client_new_v1.js'></script>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="/timesync/timesync.js"></script> 
 		<script src="webmidi.js"></script>
