Re-added chart producing capability. Added new graphic score for programNotes and fixed some errors in the programNotes

--- a/files/programNotes.html
+++ b/files/programNotes.html
@@ -6,14 +6,15 @@
 	</head>
 	<body>
 		<h1>Clade II</h1>
-		<a href='index.html'>Full Score</a><br/>
+		<a href='http://clade-ii.herokuapp.com'>Full Score for Players</a><br/>
+		<a href='http://clade-ii.herokuapp.com/serverHost.html'>Full Navigable Score (Only choose this is if you will be controlling the session)</a>
 		<h2>Navigating the Score</h2>
 		Click anywhere on the top timeline to navigate to that position in time. Press "enter" to start playback, "esc" to pause playback.
 		<h2>Performance Notes</h2>
 		<h3>Explanation of Notation</h3>
 		<p>The score is in a grid layout. Each part is provided with a visual representation of dynamics, articulation, and attack
 		called an "envelope". This is the pink shape displayed behind the staff. Each performer starts to play either once the start countdown reaches
-		0, or when the envelope reaches the left line on the screen. The loudest dynamic is represented when the top of the envelop reaches the top line of the staff. Silence is represented
+		0, or when the envelope reaches the left line on the screen. The loudest dynamic is represented when the top of the envelope reaches the top line of the staff. Silence is represented
 		by an absence of the envelope. Additionally, the staff for each part will disappear while the part rests, and reappear 5 seconds before each entrance.</p>
 		<p>The envelopes should be treated as general guidelines. Musicians are free to alter the envelopes or improvise rhythms as long as the general character lines up with envelopes currently being displayed. Rehearsals of the piece
 		may involve discussion of what kind of alterations to make where.
@@ -43,7 +44,8 @@
 			<li>Contrabass</li>
 		</ul>
 		<h3>"Pillar Chords"</h3>
-		<p>"Pillar chords" are verticalities that occur for 16 seconds every 98 seconds. These form the structure of the piece.
-		<div style='display:inline'><img src='pg1.svg'/><img src='pg2.svg'/></div>
+		<p>"Pillar chords" are verticalities that occur for 16 seconds every 98 seconds. These form the structure of the piece. After this period, the parts are allowed to wander and meander according to an algorithm, where the parts are gradually funneled into the notes
+		of the next pillar chord, and the probability of changing pithes gradually increases.
+		<div style='display:inline'><img src='graphic.svg'/></div>
 	</body>
 </html>
