changed index to be program notes

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<body style='padding:0px;'>
 		<div style='max-width:800px; margin: 0 auto'>
 			<h1>Clade II</h1>
-			<a href='http://clade-ii.herokuapp.com'>Full Score for Players</a><br/>
-			<a href='http://clade-ii.herokuapp.com/serverHost.html'>Full Navigable Score (Only choose this is if you will be controlling the session)</a>
+			<a href='/performer.html'>Full Score for Players</a><br/>
+			<a href='/serverHost.html'>Full Navigable Score (Only choose this is if you will be controlling the session)</a>
 			<h2>Navigating the Score</h2>
 			Click anywhere on the top timeline to navigate to that position in time. Press "enter" to start playback, "esc" to pause playback.
 			<h2>Performance Notes</h2>
